--- a/app/src/main/res/layout/fragment_macro_movement.xml
+++ b/app/src/main/res/layout/fragment_macro_movement.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.macros.MacroMovementFragment">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:id="@+id/linearLayout2"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintHeight_percent=".9"
+        app:layout_constraintBottom_toTopOf="@id/save_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/conf"
-            android:layout_weight="0.5"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textSize="20sp"
-            android:text="@string/move_text_label" />
+            android:layout_weight="0.5"
+            android:text="@string/move_text_label"
+            android:textSize="20sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,12 +52,12 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:scaleType="fitCenter"
                     android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_action"
                     android:button="@android:color/transparent"
                     android:contentDescription="@string/arriba"
                     android:gravity="center"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/ic_baseline_arrow_circle_up_24" />
 
                 <RadioButton
@@ -73,12 +81,12 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:scaleType="fitCenter"
                     android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_action"
                     android:button="@android:color/transparent"
                     android:contentDescription="@string/izquierda"
                     android:gravity="center"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/ic_baseline_turn_left_24" />
 
                 <ImageButton
@@ -86,25 +94,25 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:scaleType="fitCenter"
                     android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_emotion"
                     android:button="@android:color/transparent"
                     android:contentDescription="@string/centro"
                     android:gravity="center"
-                    android:src="@drawable/ic_baseline_face_24" />
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_stop" />
 
                 <ImageButton
                     android:id="@+id/der"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:scaleType="fitCenter"
                     android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_action"
                     android:button="@android:color/transparent"
                     android:contentDescription="@string/derecha"
                     android:gravity="center"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/ic_baseline_turn_right_24" />
             </LinearLayout>
 
@@ -128,12 +136,12 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:scaleType="fitCenter"
                     android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_action"
                     android:button="@android:color/transparent"
                     android:contentDescription="@string/abajo"
                     android:gravity="center"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/ic_baseline_arrow_circle_down_24" />
 
                 <RadioButton
@@ -151,11 +159,11 @@
 
         <TextView
             android:id="@+id/emo_label"
-            android:layout_weight="0.5"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textSize="20sp"
-            android:text="@string/emo_label" />
+            android:layout_weight="0.5"
+            android:text="@string/emo_label"
+            android:textSize="20sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -173,53 +181,53 @@
                     android:id="@+id/muy_feliz"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
                     android:layout_weight="1"
+                    android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_emotion"
                     android:button="@android:color/transparent"
-                    android:src="@drawable/ic_muyfeliz"
                     android:contentDescription="@string/muy_feliz"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_muyfeliz" />
 
                 <ImageButton
                     android:id="@+id/feliz"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
                     android:layout_weight="1"
+                    android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_emotion"
                     android:button="@android:color/transparent"
                     android:contentDescription="@string/feliz"
-                    android:src="@drawable/ic_feliz"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_feliz" />
 
                 <ImageButton
                     android:id="@+id/triste"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
                     android:layout_weight="1"
+                    android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_emotion"
                     android:button="@android:color/transparent"
                     android:contentDescription="@string/triste"
-                    android:src="@drawable/ic_triste"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_triste" />
 
                 <ImageButton
                     android:id="@+id/muy_triste"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
                     android:layout_weight="1"
+                    android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_emotion"
                     android:button="@android:color/transparent"
-                    android:src="@drawable/ic_muytriste"
                     android:contentDescription="@string/muy_triste"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_muytriste" />
             </LinearLayout>
 
             <LinearLayout
@@ -232,61 +240,68 @@
                     android:id="@+id/neutro"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
                     android:layout_weight="1"
+                    android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_emotion"
                     android:button="@android:color/transparent"
                     android:contentDescription="@string/neutro"
-                    android:src="@drawable/ic_neutro"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_neutro" />
 
                 <ImageButton
                     android:id="@+id/furioso"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
                     android:layout_weight="1"
+                    android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_emotion"
                     android:button="@android:color/transparent"
-                    android:src="@drawable/ic_furioso"
                     android:contentDescription="@string/furioso"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_furioso" />
 
                 <ImageButton
                     android:id="@+id/sorprendido"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
                     android:layout_weight="1"
+                    android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_emotion"
                     android:button="@android:color/transparent"
                     android:contentDescription="@string/sorprendido"
-                    android:src="@drawable/ic_sorprendido"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_sorprendido" />
 
                 <ImageButton
                     android:id="@+id/enfermo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
                     android:layout_weight="1"
+                    android:adjustViewBounds="true"
                     android:background="@drawable/custom_radio_emotion"
                     android:button="@android:color/transparent"
                     android:contentDescription="@string/enfermo"
-                    android:src="@drawable/ic_enfermo"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_enfermo" />
             </LinearLayout>
         </LinearLayout>
-
-        <Button
-            android:id="@+id/save_button"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="@string/save_act_label" />
     </LinearLayout>
-</FrameLayout>
+    <Button
+        android:id="@+id/save_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent=".1"
+        android:background="@drawable/custom_radio_emotion"
+        android:textSize="15sp"
+        android:button="@android:color/transparent"
+        android:text="@string/save_act_label" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
