--- a/app/src/main/res/layout/exec_play_fragment.xml
+++ b/app/src/main/res/layout/exec_play_fragment.xml
@@ -1,51 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.execscript.ExecScriptFragment">
 
-    <LinearLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-
         <LinearLayout
+            android:id="@+id/lay4"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="horizontal"
-            android:layout_weight="1">
+            app:layout_constraintHeight_percent=".08"
+            app:layout_constraintBottom_toTopOf="@id/execline_view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <Button
                 android:id="@+id/stop_script"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_height="match_parent"
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:autoSizeTextType="uniform"
-                android:background="@null"
                 android:text="@string/stop_script" />
 
             <Button
                 android:id="@+id/resume_script"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_height="match_parent"
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:autoSizeTextType="uniform"
-                android:background="@null"
                 android:text="@string/resume_script" />
 
             <Button
                 android:id="@+id/cancel_script"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_height="match_parent"
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:autoSizeTextType="uniform"
-                android:background="@null"
                 android:text="@string/cancel_script" />
         </LinearLayout>
 
@@ -53,8 +47,12 @@
             android:id="@+id/execline_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="20"/>
-    </LinearLayout>
+            app:layout_constraintHeight_percent=".92"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/lay4"
+            />
 
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
