--- a/app/src/main/res/layout/fragment_macro_home.xml
+++ b/app/src/main/res/layout/fragment_macro_home.xml
@@ -1,70 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.macros.MacroHomeFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
 
         <LinearLayout
+            android:id="@+id/linearLayout4"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:paddingTop="5dp"
+            app:layout_constraintHeight_percent=".06"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@id/actionFragmentContainer"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            >
 
             <RadioButton
                 android:id="@+id/movement_toggle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/custom_radio_action"
                 android:button="@android:color/transparent"
-                android:textSize="20sp"
 
-                android:layout_weight="1"
-                android:textAlignment="center"
                 android:text="@string/movement_toggle_label"
-                />
+                android:textAlignment="center"
+                android:textSize="20sp" />
+
             <RadioButton
                 android:id="@+id/record_toggle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@drawable/custom_radio_audio"
+                android:button="@android:color/transparent"
                 android:text="@string/record_toggle_label"
                 android:textAlignment="center"
-                android:textSize="20sp"
-                android:background="@drawable/custom_radio_audio"
-                android:button="@android:color/transparent"/>
+                android:textSize="20sp" />
 
             <RadioButton
                 android:id="@+id/screen_toggle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:textSize="20sp"
-                android:text="@string/screen_toggle_label"
-                android:textAlignment="center"
                 android:background="@drawable/custom_radio_extras"
                 android:button="@android:color/transparent"
-                />
+                android:text="@string/screen_toggle_label"
+                android:textAlignment="center"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/actionFragmentContainer"
             android:layout_width="match_parent"
-            android:layout_weight="17"
-            android:layout_height="0dp" />
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent=".84"
+            app:layout_constraintBottom_toTopOf="@id/prev_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/linearLayout4"
+            android:paddingBottom="5dp"
+
+            />
+
         <Button
             android:id="@+id/prev_button"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textSize="20sp"
-            android:layout_weight="2"
-            android:text="@string/prev_macro_label" />
-    </LinearLayout>
+            android:text="@string/prev_macro_label"
+            app:layout_constraintHeight_percent=".1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/actionFragmentContainer"
+            android:background="@drawable/custom_radio_emotion"
+            android:textSize="15sp" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
