--- a/app/src/main/res/layout/fragment_script_viewer.xml
+++ b/app/src/main/res/layout/fragment_script_viewer.xml
@@ -3,37 +3,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.scriptviewer.ScriptViewerFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.scriptviewer.ScriptViewerFragment"
+    android:paddingTop="10dp">
 
-    <LinearLayout
-
+    <Button
+        android:id="@+id/create_macro"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-        <Button
-            android:id="@+id/start_play"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.3"
-            android:autoSizeTextType="uniform"
-            android:background="@null"
-            android:text="@string/start_play" />
-        <Button
-            android:id="@+id/create_macro"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.3"
-            android:autoSizeTextType="uniform"
-            android:background="@null"
-            android:text="@string/create_macro" />
+        android:layout_height="0dp"
+        android:autoSizeTextType="uniform"
+        android:text="@string/create_macro"
+        app:layout_constraintHeight_percent=".06"
+        app:layout_constraintBottom_toTopOf="@id/scriptline_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/custom_radio_emotion"
+        android:textSize="15sp" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/scriptline_view"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="20"/>
-    </LinearLayout>
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/scriptline_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingTop="10dp"
+        app:layout_constraintHeight_percent=".94"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/create_macro"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
