--- a/app/src/main/res/layout/fragment_macro_extras.xml
+++ b/app/src/main/res/layout/fragment_macro_extras.xml
@@ -132,7 +132,120 @@
                 android:gravity="center"
                 android:text="" />
         </LinearLayout>
+        <TextView
+            android:id="@+id/act_conf_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/act_conf_label2"
+            android:textSize="15sp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/extraAL1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/custom_radio_extras"
+                android:button="@android:color/transparent"
+                android:gravity="center"
+                android:text="" />
+
+            <RadioButton
+                android:id="@+id/extraAL2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/custom_radio_extras"
+                android:button="@android:color/transparent"
+                android:gravity="center"
+                android:text="" />
+
+            <RadioButton
+                android:id="@+id/extraAL3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/custom_radio_extras"
+                android:button="@android:color/transparent"
+                android:gravity="center"
+                android:text="" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/extraAL4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/custom_radio_extras"
+                android:button="@android:color/transparent"
+                android:gravity="center"
+                android:text="" />
+
+            <RadioButton
+                android:id="@+id/extraAL5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/custom_radio_extras"
+                android:button="@android:color/transparent"
+                android:gravity="center"
+                android:text="" />
+
+            <RadioButton
+                android:id="@+id/extraAL6"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/custom_radio_extras"
+                android:button="@android:color/transparent"
+                android:gravity="center"
+                android:text="" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/extraAL7"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/custom_radio_extras"
+                android:button="@android:color/transparent"
+                android:gravity="center"
+                android:text="" />
+
+            <RadioButton
+                android:id="@+id/extraAL8"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/custom_radio_extras"
+                android:button="@android:color/transparent"
+                android:gravity="center"
+                android:text="" />
+
+            <RadioButton
+                android:id="@+id/extraAL9"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/custom_radio_extras"
+                android:button="@android:color/transparent"
+                android:gravity="center"
+                android:text="" />
+        </LinearLayout>
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
