--- a/app/src/main/res/layout/fragment_script_editor.xml
+++ b/app/src/main/res/layout/fragment_script_editor.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.scripteditor.ScriptEditorFragment">
+    tools:context=".ui.scripteditor.ScriptEditorFragment"
+    android:paddingTop="10dp">
 
     <Space
         android:id="@+id/spacetop"
