--- a/app/src/main/res/layout/scenemacro_cardview.xml
+++ b/app/src/main/res/layout/scenemacro_cardview.xml
@@ -53,7 +53,7 @@
                 android:textAlignment="center" />
 
             <ImageButton
-                android:id="@+id/play_button"
+                android:id="@+id/view_button"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
