--- a/app/src/main/res/layout/fragment_macro_record.xml
+++ b/app/src/main/res/layout/fragment_macro_record.xml
@@ -43,7 +43,7 @@
             android:src="@drawable/ic_baseline_mic_24" />
 
         <ImageButton
-            android:id="@+id/play_button"
+            android:id="@+id/view_button"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="8"
